# formatabela

./: .gitignore  README.md  main.py  pyproject.toml
src/aplicacao/execoes/: __init__.py  excecao_de_aplicacao.py
src/aplicacao/fabricas/: __init__.py  fabrica_celula.py
src/aplicacao/interfaces/: __init__.py  interface_servico_ler_tabela.py
src/aplicacao/servicos/: __init__.py  servico_formatar_tabela.py
src/compartilhado/: __init__.py  excecao_personalizada.py
src/compartilhado/excecoes/: excecao_personalizada.py
src/dominio/agregados/: __init__.py  area_de_matricula.py
src/dominio/entidades/: __init__.py  celula.py
src/dominio/enums/: __init__.py  enum_cns_de_registro_anterior.py  enum_formato_data_de_matricula.py  enum_formato_de_inscricao_imobiliaria_municipal.py  enum_formato_inscricao_imobiliaria_municipal.py  enum_medida_da_area.py  (+3 more)
testes/exemplos/: tabela_teste.xlsx
testes/fabricas_de_teste/: __init__.py  aleatorio.py  fabrica_teste_area_de_matricula.py  fabrica_teste_celula.py  fabrica_teste_celula_otd.py  fabrica_teste_cns_de_registro_anterior.py  fabrica_teste_coordenadas_georreferenciadas_de_matricula.py  fabrica_teste_data_de_matricula.py  fabrica_teste_folha_de_livro.py  fabrica_teste_inscricao_imobiliaria_municipal_de_matricula.py  fabrica_teste_livro_de_registro_anterior.py  fabrica_teste_livro_de_titulo_aquisitivo.py  fabrica_teste_medida_da_area.py  fabrica_teste_numero_de_ordem_de_livro.py  fabrica_teste_numero_de_ordem_de_matricula.py  fabrica_teste_tamanho_da_area.py  fabrica_teste_tipo_de_imovel_de_matricula.py  string_aleatoria.py
(+141 files in other folders)
