[tool.poetry]
name = "formatabela"
version = "0.1.0"
description = "Ferramenta para formatar tabelas"
authors = ["Francisco Mascarenhas"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mockito = "^1.3.3"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
